@@ -1,7 +1,7 @@
 package com.comet.opik.domain;
 
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Project;
 import com.comet.opik.api.TraceThreadStatus;
@@ -32,6 +32,8 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.utils.ErrorUtils.failWithNotFound;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.groupingBy;
@@ -56,11 +58,13 @@ public interface FeedbackScoreService {
 
     Mono<FeedbackScoreNames> getProjectsFeedbackScoreNames(Set<UUID> projectIds);
 
-    Mono<Void> scoreBatchOfThreads(List<FeedbackScoreBatchItem> scores);
+    Mono<Void> scoreBatchOfThreads(List<FeedbackScoreBatchItemThread> scores);
 
     Mono<Void> deleteThreadScores(String projectName, String threadId, Set<String> names);
 
     Mono<FeedbackScoreNames> getTraceThreadsFeedbackScoreNames(UUID projectId);
+
+    Mono<Void> deleteThreadManualScores(Set<UUID> threadModelId, UUID projectId);
 }
 
 @Slf4j
@@ -75,7 +79,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
     private final @NonNull TraceThreadService traceThreadService;
 
     @Builder(toBuilder = true)
-    record ProjectDto(Project project, List<FeedbackScoreBatchItem> scores) {
+    record ProjectDto<T extends FeedbackScoreItem>(Project project, List<T> scores) {
     }
 
     @Override
@@ -112,7 +116,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }
 
         // group scores by project name to resolve project itemIds
-        Map<String, List<FeedbackScoreBatchItem>> scoresPerProject = scores
+        Map<String, List<FeedbackScoreItem>> scoresPerProject = scores
                 .stream()
                 .map(score -> {
                     IdGenerator.validateVersion(score.id(), entityType.getType()); // validate span/trace id
@@ -121,7 +125,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                             .projectName(WorkspaceUtils.getProjectName(score.projectName()))
                             .build();
                 })
-                .collect(groupingBy(FeedbackScoreBatchItem::projectName));
+                .collect(groupingBy(FeedbackScoreItem::projectName));
 
         return projectService.retrieveByNamesOrCreate(scoresPerProject.keySet())
                 .map(ProjectService::groupByName)
@@ -130,23 +134,33 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .then();
     }
 
-    private Mono<Long> saveScoreBatch(EntityType entityType, List<ProjectDto> projects) {
+    private <T extends FeedbackScoreItem> Mono<Long> saveScoreBatch(EntityType entityType,
+            List<ProjectDto<T>> projects) {
         return Flux.fromIterable(projects)
                 .flatMap(projectDto -> dao.scoreBatchOf(entityType, projectDto.scores()))
                 .reduce(0L, Long::sum);
     }
 
-    private List<ProjectDto> mergeProjectsAndScores(Map<String, Project> projectMap,
-            Map<String, List<FeedbackScoreBatchItem>> scoresPerProject) {
+    private <T extends FeedbackScoreItem> List<ProjectDto<T>> mergeProjectsAndScores(
+            Map<String, Project> projectMap,
+            Map<String, List<T>> scoresPerProject) {
         return scoresPerProject.keySet()
                 .stream()
                 .map(projectName -> {
                     Project project = projectMap.get(projectName);
-                    return new ProjectDto(
+                    return new ProjectDto<>(
                             project,
                             scoresPerProject.get(projectName)
                                     .stream()
-                                    .map(item -> item.toBuilder().projectId(project.id()).build()) // set projectId
+                                    .map(item -> switch (item) {
+                                        case FeedbackScoreBatchItem tracingItem -> tracingItem.toBuilder()
+                                                .projectId(project.id()) // set projectId
+                                                .build();
+                                        case FeedbackScoreBatchItemThread threadItem -> threadItem.toBuilder()
+                                                .projectId(project.id()) // set projectId
+                                                .build();
+                                    }) // set projectId
+                                    .map(item -> (T) item)
                                     .toList());
                 })
                 .toList();
@@ -195,7 +209,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
     }
 
     @Override
-    public Mono<Void> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchItem> scores) {
+    public Mono<Void> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchItemThread> scores) {
         return processThreadsScoreBatch(scores);
     }
 
@@ -232,6 +246,24 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .map(FeedbackScoreNames::new);
     }
 
+    @Override
+    public Mono<Void> deleteThreadManualScores(@NotNull Set<UUID> threadModelId, @NotNull UUID projectId) {
+        if (threadModelId.isEmpty()) {
+            log.info("No thread model IDs provided for deletion of manual scores in projectId '{}'", projectId);
+            return Mono.empty();
+        }
+
+        return dao.deleteThreadManualScores(threadModelId, projectId)
+                .doOnNext(count -> {
+                    if (count > 0) {
+                        log.info("Deleted '{}' manual scores for threads in projectId '{}'", count, projectId);
+                    } else {
+                        log.info("No manual scores found to delete for projectId '{}'", projectId);
+                    }
+                })
+                .then();
+    }
+
     private Mono<UUID> getProject(String projectName) {
         return Mono.deferContextual(context -> Mono.fromCallable(() -> {
             String workspaceId = context.get(RequestContext.WORKSPACE_ID);
@@ -248,7 +280,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }));
     }
 
-    private Mono<Void> processThreadsScoreBatch(List<FeedbackScoreBatchItem> scores) {
+    private Mono<Void> processThreadsScoreBatch(List<FeedbackScoreBatchItemThread> scores) {
 
         if (scores.isEmpty()) {
             log.info("No scores provided for batch processing of threads");
@@ -256,12 +288,12 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }
 
         // group scores by project name to resolve project itemIds
-        Map<String, List<FeedbackScoreBatchItem>> scoresPerProject = scores
+        Map<String, List<FeedbackScoreBatchItemThread>> scoresPerProject = scores
                 .stream()
                 .map(score -> score.toBuilder()
                         .projectName(WorkspaceUtils.getProjectName(score.projectName()))
                         .build())
-                .collect(groupingBy(FeedbackScoreBatchItem::projectName));
+                .collect(groupingBy(FeedbackScoreItem::projectName));
 
         return projectService.retrieveByNamesOrCreate(scoresPerProject.keySet())
                 .map(ProjectService::groupByName)
@@ -271,13 +303,13 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .then();
     }
 
-    private Mono<Long> saveThreadScoreBatch(List<ProjectDto> projects) {
+    private Mono<Long> saveThreadScoreBatch(List<ProjectDto<FeedbackScoreBatchItemThread>> projects) {
         return Flux.fromIterable(projects)
                 .flatMap(projectDto -> {
                     // Collect unique thread IDs from the scores
                     Set<String> threadIds = projectDto.scores()
                             .stream()
-                            .map(FeedbackScoreBatchItem::threadId)
+                            .map(FeedbackScoreItem::threadId)
                             .collect(Collectors.toSet());
 
                     return Flux.fromIterable(threadIds)
@@ -293,13 +325,14 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .reduce(0L, Long::sum);
     }
 
-    private Mono<ProjectDto> validateThreadStatus(ProjectDto dto) {
+    private Mono<ProjectDto<FeedbackScoreBatchItemThread>> validateThreadStatus(
+            ProjectDto<FeedbackScoreBatchItemThread> dto) {
         Set<String> expectedCloseThreadIds = dto.scores.stream()
-                .map(FeedbackScoreBatchItem::threadId)
+                .map(FeedbackScoreItem::threadId)
                 .collect(Collectors.toSet());
 
         Set<UUID> ids = dto.scores.stream()
-                .map(FeedbackScoreBatchItem::id)
+                .map(FeedbackScoreItem::id)
                 .collect(Collectors.toSet());
 
         var criteria = TraceThreadCriteria.builder()
@@ -333,12 +366,14 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .build();
     }
 
-    private Mono<Map.Entry<String, UUID>> getOrCreateThread(ProjectDto projectDto, String threadId) {
+    private Mono<Map.Entry<String, UUID>> getOrCreateThread(ProjectDto<FeedbackScoreBatchItemThread> projectDto,
+            String threadId) {
         return traceThreadService.getOrCreateThreadId(projectDto.project().id(), threadId)
                 .map(threadModelId -> Map.entry(threadId, threadModelId));
     }
 
-    private ProjectDto bindThreadModelId(ProjectDto projectDto, Map<String, UUID> threadIdMap) {
+    private ProjectDto<FeedbackScoreBatchItemThread> bindThreadModelId(
+            ProjectDto<FeedbackScoreBatchItemThread> projectDto, Map<String, UUID> threadIdMap) {
         return projectDto.toBuilder()
                 .project(projectDto.project())
                 .scores(projectDto.scores()
@@ -346,7 +381,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                         .map(score -> score.toBuilder()
                                 .id(threadIdMap.get(score.threadId())) // set thread model id
                                 .build())
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 }
