@@ -6,8 +6,9 @@ import com.comet.opik.api.DeleteFeedbackScore;
 import com.comet.opik.api.DeleteTraceThreads;
 import com.comet.opik.api.ErrorInfo;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchContainer;
+import com.comet.opik.api.FeedbackScoreItem;
+import com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Guardrail;
 import com.comet.opik.api.Project;
@@ -20,6 +21,7 @@ import com.comet.opik.api.TraceThread;
 import com.comet.opik.api.TraceThread.TraceThreadPage;
 import com.comet.opik.api.TraceThreadIdentifier;
 import com.comet.opik.api.TraceThreadStatus;
+import com.comet.opik.api.TraceThreadUpdate;
 import com.comet.opik.api.TraceUpdate;
 import com.comet.opik.api.Visibility;
 import com.comet.opik.api.VisibilityMode;
@@ -45,6 +47,7 @@ import com.comet.opik.api.resources.utils.resources.GuardrailsGenerator;
 import com.comet.opik.api.resources.utils.resources.GuardrailsResourceClient;
 import com.comet.opik.api.resources.utils.resources.ProjectResourceClient;
 import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
+import com.comet.opik.api.resources.utils.resources.ThreadCommentResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
 import com.comet.opik.api.resources.utils.spans.SpanAssertions;
 import com.comet.opik.api.resources.utils.traces.TraceAssertions;
@@ -86,6 +89,7 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 import org.apache.http.HttpStatus;
+import org.assertj.core.api.Assertions;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterAll;
@@ -137,16 +141,19 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemBuilder;
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.api.Visibility.PRIVATE;
 import static com.comet.opik.api.Visibility.PUBLIC;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
+import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComments;
-import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertTraceComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertUpdatedComment;
 import static com.comet.opik.api.resources.utils.FeedbackScoreAssertionUtils.assertFeedbackScoreNames;
 import static com.comet.opik.api.resources.utils.QuotaLimitTestUtils.ERR_USAGE_LIMIT_EXCEEDED;
@@ -171,6 +178,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static java.util.UUID.randomUUID;
 import static java.util.function.Predicate.not;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -254,6 +262,7 @@ class TracesResourceTest {
     private SpanResourceClient spanResourceClient;
     private GuardrailsResourceClient guardrailsResourceClient;
     private GuardrailsGenerator guardrailsGenerator;
+    private ThreadCommentResourceClient threadCommentResourceClient;
 
     @BeforeAll
     void setUpAll(ClientSupport client) {
@@ -269,6 +278,7 @@ class TracesResourceTest {
         this.traceResourceClient = new TraceResourceClient(this.client, baseURI);
         this.spanResourceClient = new SpanResourceClient(this.client, baseURI);
         this.guardrailsResourceClient = new GuardrailsResourceClient(client, baseURI);
+        this.threadCommentResourceClient = new ThreadCommentResourceClient(client, baseURI);
         this.guardrailsGenerator = new GuardrailsGenerator();
     }
 
@@ -708,7 +718,7 @@ class TracesResourceTest {
 
             var id = create(trace, okApikey, workspaceName);
 
-            var scores = IntStream.range(0, 5)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
                     .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
@@ -716,7 +726,7 @@ class TracesResourceTest {
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -1154,7 +1164,7 @@ class TracesResourceTest {
 
             var id = create(trace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 5)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 5)
                     .mapToObj(i -> FeedbackScoreBatchItem.builder()
                             .name("name" + i)
                             .id(id)
@@ -1162,7 +1172,7 @@ class TracesResourceTest {
                             .source(ScoreSource.SDK)
                             .projectName(trace.projectName())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var batch = FeedbackScoreBatch.builder()
                     .scores(scores)
@@ -1501,6 +1511,8 @@ class TracesResourceTest {
                     .comments(traceIdToCommentsMap.get(trace.id()))
                     .build()).toList();
 
+            traces = updateSpanCounts(traces, traceIdToSpansMap);
+
             var values = testAssertion.transformTestParams(traces, traces.reversed(), List.of());
 
             testAssertion.assertTest(projectName, null, API_KEY, TEST_WORKSPACE, values.expected(), values.unexpected(),
@@ -1540,6 +1552,8 @@ class TracesResourceTest {
                     .toList();
             batchCreateSpansAndAssert(spans, apiKey, workspaceName);
 
+            traces = updateSpanCounts(traces, spans);
+
             var values = testAssertion.transformTestParams(traces, traces.reversed(), List.of());
 
             testAssertion.assertTest(projectName, null, apiKey, workspaceName, values.expected(), values.unexpected(),
@@ -1572,6 +1586,7 @@ class TracesResourceTest {
                         .tags(null)
                         .feedbackScores(null)
                         .guardrailsValidations(null)
+                        .llmSpanCount(0)
                         .build();
 
                 traces.add(trace);
@@ -1608,6 +1623,7 @@ class TracesResourceTest {
                     .tags(null)
                     .feedbackScores(null)
                     .guardrailsValidations(null)
+                    .llmSpanCount(0)
                     .build();
 
             create(trace, apiKey, workspaceName);
@@ -1651,6 +1667,7 @@ class TracesResourceTest {
                             .endTime(trace.startTime().plus(randomNumber(), ChronoUnit.MILLIS))
                             .comments(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .toList();
 
@@ -1665,6 +1682,7 @@ class TracesResourceTest {
                             .endTime(trace.startTime().plus(randomNumber(), ChronoUnit.MILLIS))
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .toList();
 
@@ -1730,6 +1748,8 @@ class TracesResourceTest {
                         .usage(aggregateSpansUsage(spans))
                         .build();
 
+                expectedTrace = updateSpanCounts(expectedTrace, spans);
+
                 traces.add(expectedTrace);
             }
 
@@ -1768,6 +1788,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -1820,6 +1841,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(UUID.randomUUID().toString())
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -1866,6 +1888,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -1910,6 +1933,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -1953,6 +1977,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -1995,6 +2020,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -2043,6 +2069,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -2095,6 +2122,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -2136,6 +2164,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2183,6 +2212,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2231,6 +2261,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2278,6 +2309,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2324,6 +2356,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -2366,6 +2399,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -2410,6 +2444,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -2458,7 +2493,6 @@ class TracesResourceTest {
                     .collect(Collectors.toCollection(ArrayList::new));
 
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
-            var unexpectedTraces = traces.subList(1, traces.size());
 
             var spans = PodamFactoryUtils.manufacturePojoList(factory, Span.class).stream()
                     .map(spanInStream -> spanInStream.toBuilder()
@@ -2474,7 +2508,9 @@ class TracesResourceTest {
 
             batchCreateSpansAndAssert(spans, apiKey, workspaceName);
 
-            var expectedTrace = traces.getFirst().toBuilder()
+            var finalTraces = updateSpanCounts(traces, spans);
+            var unexpectedTraces = finalTraces.subList(1, traces.size());
+            var expectedTrace = finalTraces.getFirst().toBuilder()
                     .usage(aggregateSpansUsage(spans))
                     .totalEstimatedCost(calculateEstimatedCost(spans))
                     .build();
@@ -2485,7 +2521,7 @@ class TracesResourceTest {
                     .value("0")
                     .build());
 
-            var values = testAssertion.transformTestParams(traces, List.of(expectedTrace), unexpectedTraces);
+            var values = testAssertion.transformTestParams(finalTraces, List.of(expectedTrace), unexpectedTraces);
 
             testAssertion.assertTest(projectName, null, apiKey, workspaceName, values.expected(), values.unexpected(),
                     values.all(), filters, Map.of());
@@ -2543,16 +2579,17 @@ class TracesResourceTest {
                                     .build()))
                     .toList();
 
-            batchCreateSpansAndAssert(spans, apiKey, workspaceName);
-            batchCreateSpansAndAssert(otherSpans, apiKey, workspaceName);
+            var allSpans = Stream.concat(spans.stream(), otherSpans.stream()).toList();
+            batchCreateSpansAndAssert(allSpans, apiKey, workspaceName);
 
             traces.set(0, traces.getFirst().toBuilder()
                     .usage(aggregateSpansUsage(spans))
                     .totalEstimatedCost(calculateEstimatedCost(spans))
                     .build());
 
-            var expectedTraces = getExpectedTraces.apply(traces);
-            var unexpectedTraces = getUnexpectedTraces.apply(traces);
+            var finalTraces = updateSpanCounts(traces, allSpans);
+            var expectedTraces = getExpectedTraces.apply(finalTraces);
+            var unexpectedTraces = getUnexpectedTraces.apply(finalTraces);
 
             var filters = List.of(TraceFilter.builder()
                     .field(TraceField.TOTAL_ESTIMATED_COST)
@@ -2560,10 +2597,111 @@ class TracesResourceTest {
                     .value("0.00")
                     .build());
 
-            var values = testAssertion.transformTestParams(traces, expectedTraces.reversed(), unexpectedTraces);
+            var values = testAssertion.transformTestParams(finalTraces, expectedTraces.reversed(), unexpectedTraces);
 
             testAssertion.assertTest(projectName, null, apiKey, workspaceName, values.expected(), values.unexpected(),
                     values.all(), filters, Map.of());
+        }
+
+        Stream<Arguments> whenFilterLlmSpanCountOperator__thenReturnTracesFiltered() {
+            return getFilterTestArguments().flatMap(args -> Stream.of(
+                    Arguments.of(args.get()[0], args.get()[1], Operator.EQUAL),
+                    Arguments.of(args.get()[0], args.get()[1], Operator.NOT_EQUAL),
+                    Arguments.of(args.get()[0], args.get()[1], Operator.GREATER_THAN),
+                    Arguments.of(args.get()[0], args.get()[1], Operator.GREATER_THAN_EQUAL),
+                    Arguments.of(args.get()[0], args.get()[1], Operator.LESS_THAN),
+                    Arguments.of(args.get()[0], args.get()[1], Operator.LESS_THAN_EQUAL)));
+        }
+
+        @ParameterizedTest
+        @MethodSource
+        void whenFilterLlmSpanCountOperator__thenReturnTracesFiltered(String endpoint,
+                TracePageTestAssertion testAssertion,
+                Operator operator) {
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var traces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
+                    .stream()
+                    .map(trace -> {
+                        var llmSpanCount = RandomUtils.secure().randomInt(1, 7);
+                        return trace.toBuilder()
+                                .projectId(null)
+                                .projectName(projectName)
+                                .usage(null)
+                                .feedbackScores(null)
+                                .threadId(null)
+                                .totalEstimatedCost(null)
+                                .guardrailsValidations(null)
+                                .spanCount(llmSpanCount + RandomUtils.secure().randomInt(1, 7))
+                                .llmSpanCount(llmSpanCount)
+                                .build();
+                    })
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+
+            var spans = traces.stream()
+                    .flatMap(trace -> IntStream.range(0, trace.spanCount())
+                            .mapToObj(i -> factory.manufacturePojo(Span.class).toBuilder()
+                                    .usage(null)
+                                    .totalEstimatedCost(null)
+                                    .projectName(projectName)
+                                    .traceId(trace.id())
+                                    .type(i < trace.llmSpanCount() ? SpanType.llm : SpanType.general)
+                                    .build()))
+                    .toList();
+
+            spanResourceClient.batchCreateSpans(spans, apiKey, workspaceName);
+
+            var llmSpanCountToCompareAgainst = traces.getFirst().llmSpanCount();
+
+            Predicate<Trace> matchesFilter = makeLlmSpanCountPredicate(operator, llmSpanCountToCompareAgainst);
+            Comparator<Trace> traceIdComparator = Comparator.comparing(Trace::id).reversed();
+
+            var expectedTraces = traces.stream()
+                    .filter(matchesFilter)
+                    .sorted(traceIdComparator)
+                    .collect(Collectors.toList());
+
+            var unexpectedTraces = traces.stream()
+                    .filter(matchesFilter.negate())
+                    .sorted(traceIdComparator)
+                    .collect(Collectors.toList());
+
+            var filters = List.of(TraceFilter.builder()
+                    .field(TraceField.LLM_SPAN_COUNT)
+                    .operator(operator)
+                    .value(Integer.toString(llmSpanCountToCompareAgainst))
+                    .build());
+
+            var values = testAssertion.transformTestParams(traces, expectedTraces, unexpectedTraces);
+
+            testAssertion.assertTest(projectName, null, apiKey, workspaceName, values.expected(), values.unexpected(),
+                    values.all(), filters, Map.of());
+        }
+
+        Predicate<Trace> makeLlmSpanCountPredicate(Operator operator, int value) {
+            switch (operator) {
+                case Operator.EQUAL :
+                    return trace -> trace.llmSpanCount() == value;
+                case Operator.NOT_EQUAL :
+                    return trace -> trace.llmSpanCount() != value;
+                case Operator.GREATER_THAN :
+                    return trace -> trace.llmSpanCount() > value;
+                case Operator.GREATER_THAN_EQUAL :
+                    return trace -> trace.llmSpanCount() >= value;
+                case Operator.LESS_THAN :
+                    return trace -> trace.llmSpanCount() < value;
+                case Operator.LESS_THAN_EQUAL :
+                    return trace -> trace.llmSpanCount() <= value;
+                default :
+                    throw new IllegalArgumentException("Invalid operator for llm span count filtering: " + operator);
+            }
         }
 
         @ParameterizedTest
@@ -2592,6 +2730,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2638,6 +2777,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2690,6 +2830,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2740,6 +2881,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .feedbackScores(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2790,6 +2932,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2840,6 +2983,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2891,6 +3035,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2941,6 +3086,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -2992,6 +3138,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -3174,6 +3321,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(0, traces.getFirst().toBuilder()
@@ -3352,6 +3500,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -3423,6 +3572,7 @@ class TracesResourceTest {
                     .build());
             batchCreateSpansAndAssert(traceIdToSpanMap.values().stream().toList(), apiKey, workspaceName);
 
+            traces = updateSpanCounts(traces, traceIdToSpanMap.values().stream().toList());
             var expectedTraces = List.of(traces.getFirst());
             var unrelatedTraces = List.of(createTrace());
 
@@ -3463,6 +3613,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(1)
                             .build())
                     .collect(Collectors.toList());
             traces.set(0, traces.getFirst().toBuilder()
@@ -3476,6 +3627,7 @@ class TracesResourceTest {
                             .traceId(trace.id())
                             .usage(Map.of(usageKey, 123))
                             .totalEstimatedCost(null)
+                            .type(SpanType.llm)
                             .build())
                     .collect(Collectors.toMap(Span::traceId, Function.identity()));
             traceIdToSpanMap.put(traces.getFirst().id(), traceIdToSpanMap.get(traces.getFirst().id()).toBuilder()
@@ -3544,6 +3696,7 @@ class TracesResourceTest {
                     .build());
             batchCreateSpansAndAssert(traceIdToSpanMap.values().stream().toList(), apiKey, workspaceName);
 
+            traces = updateSpanCounts(traces, traceIdToSpanMap.values().stream().toList());
             var expectedTraces = List.of(traces.getFirst());
             var unrelatedTraces = List.of(createTrace());
 
@@ -3605,6 +3758,7 @@ class TracesResourceTest {
                     .build());
             batchCreateSpansAndAssert(traceIdToSpanMap.values().stream().toList(), apiKey, workspaceName);
 
+            traces = updateSpanCounts(traces, traceIdToSpanMap.values().stream().toList());
             var expectedTraces = List.of(traces.getFirst());
             var unrelatedTraces = List.of(createTrace());
 
@@ -3645,6 +3799,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(1)
                             .build())
                     .collect(Collectors.toList());
             traces.set(0, traces.getFirst().toBuilder()
@@ -3659,6 +3814,7 @@ class TracesResourceTest {
                             .traceId(trace.id())
                             .usage(Map.of(usageKey, 456))
                             .totalEstimatedCost(null)
+                            .type(SpanType.llm)
                             .build())
                     .collect(Collectors.toMap(Span::traceId, Function.identity()));
             traceIdToSpanMap.put(traces.getFirst().id(), traceIdToSpanMap.get(traces.getFirst().id()).toBuilder()
@@ -3714,6 +3870,7 @@ class TracesResourceTest {
                                             .build())
                                     .collect(Collectors.toList()))
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(1, traces.get(1).toBuilder()
@@ -3777,6 +3934,7 @@ class TracesResourceTest {
                                     .collect(Collectors.toList()))
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traces.set(traces.size() - 1, traces.getLast().toBuilder().feedbackScores(null).build());
@@ -3845,6 +4003,7 @@ class TracesResourceTest {
                             .usage(null)
                             .threadId(null)
                             .totalEstimatedCost(null)
+                            .llmSpanCount(0)
                             .feedbackScores(updateFeedbackScore(trace.feedbackScores().stream()
                                     .map(feedbackScore -> feedbackScore.toBuilder()
                                             .value(factory.manufacturePojo(BigDecimal.class))
@@ -3913,6 +4072,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .feedbackScores(updateFeedbackScore(trace.feedbackScores().stream()
                                     .map(feedbackScore -> feedbackScore.toBuilder()
                                             .value(factory.manufacturePojo(BigDecimal.class))
@@ -3977,6 +4137,7 @@ class TracesResourceTest {
                             .comments(null)
                             .totalEstimatedCost(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .feedbackScores(updateFeedbackScore(trace.feedbackScores().stream()
                                     .map(feedbackScore -> feedbackScore.toBuilder()
                                             .value(factory.manufacturePojo(BigDecimal.class))
@@ -4039,6 +4200,7 @@ class TracesResourceTest {
                             .usage(null)
                             .threadId(null)
                             .totalEstimatedCost(null)
+                            .llmSpanCount(0)
                             .feedbackScores(updateFeedbackScore(trace.feedbackScores().stream()
                                     .map(feedbackScore -> feedbackScore.toBuilder()
                                             .value(factory.manufacturePojo(BigDecimal.class))
@@ -4113,6 +4275,7 @@ class TracesResourceTest {
                                         ? Instant.now().plusSeconds(2)
                                         : now.plusNanos(1000))
                                 .guardrailsValidations(null)
+                                .llmSpanCount(0)
                                 .build();
                     })
                     .collect(Collectors.toCollection(ArrayList::new));
@@ -4267,6 +4430,7 @@ class TracesResourceTest {
                             .feedbackScores(null)
                             .guardrailsValidations(null)
                             .comments(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
             traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -4347,6 +4511,7 @@ class TracesResourceTest {
                             .threadId(null)
                             .guardrailsValidations(null)
                             .errorInfo(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -4394,6 +4559,7 @@ class TracesResourceTest {
                             .totalEstimatedCost(null)
                             .threadId(null)
                             .guardrailsValidations(null)
+                            .llmSpanCount(0)
                             .build())
                     .collect(Collectors.toCollection(ArrayList::new));
 
@@ -4459,23 +4625,23 @@ class TracesResourceTest {
 
     private String getValidValue(Field field) {
         return switch (field.getType()) {
-            case STRING, LIST, DICTIONARY, ENUM -> RandomStringUtils.secure().nextAlphanumeric(10);
+            case STRING, LIST, DICTIONARY, ENUM, STRING_STATE_DB -> RandomStringUtils.secure().nextAlphanumeric(10);
             case NUMBER, FEEDBACK_SCORES_NUMBER -> String.valueOf(randomNumber(1, 10));
-            case DATE_TIME -> Instant.now().toString();
+            case DATE_TIME, DATE_TIME_STATE_DB -> Instant.now().toString();
             case ERROR_CONTAINER -> "";
         };
     }
 
     private String getKey(Field field) {
         return switch (field.getType()) {
-            case STRING, NUMBER, DATE_TIME, LIST, ENUM, ERROR_CONTAINER -> null;
+            case STRING, NUMBER, DATE_TIME, LIST, ENUM, ERROR_CONTAINER, STRING_STATE_DB, DATE_TIME_STATE_DB -> null;
             case FEEDBACK_SCORES_NUMBER, DICTIONARY -> RandomStringUtils.secure().nextAlphanumeric(10);
         };
     }
 
     private String getInvalidValue(Field field) {
         return switch (field.getType()) {
-            case STRING, DICTIONARY, LIST, ENUM, ERROR_CONTAINER -> " ";
+            case STRING, DICTIONARY, LIST, ENUM, ERROR_CONTAINER, STRING_STATE_DB, DATE_TIME_STATE_DB -> " ";
             case NUMBER, DATE_TIME, FEEDBACK_SCORES_NUMBER -> RandomStringUtils.secure().nextAlphanumeric(10);
         };
     }
@@ -4657,6 +4823,7 @@ class TracesResourceTest {
                     .usage(aggregateSpansUsage(spans))
                     .createdAt(trace.createdAt())
                     .lastUpdatedAt(trace.lastUpdatedAt())
+                    .status(TraceThreadStatus.ACTIVE)
                     .build());
 
             Map<String, String> queryParams = Map.of("page", "1", "size", "5", "truncate", String.valueOf(truncate));
@@ -4861,6 +5028,57 @@ class TracesResourceTest {
             }
         }
 
+        @Test
+        @DisplayName("When filtering by thread tag, should return only threads with matching tags")
+        void whenFilterByTags__thenReturnThreadsWithMatchingTags() {
+
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var threadId = UUID.randomUUID().toString();
+
+            // Create traces
+            var traces = IntStream.range(0, 3)
+                    .mapToObj(it -> {
+                        Instant now = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+                        return createTrace().toBuilder()
+                                .projectName(projectName)
+                                .usage(null)
+                                .threadId(threadId)
+                                .endTime(now.plus(it, ChronoUnit.MILLIS))
+                                .startTime(now)
+                                .build();
+                    })
+                    .collect(Collectors.toList());
+
+            traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+
+            var projectId = getProjectId(projectName, workspaceName, apiKey);
+
+            var createdThread = traceResourceClient.getTraceThread(threadId, projectId, apiKey, workspaceName);
+
+            // Add tags to the thread
+            var update = factory.manufacturePojo(TraceThreadUpdate.class);
+            traceResourceClient.updateThread(update, createdThread.threadModelId(), apiKey, workspaceName, 204);
+
+            List<TraceThread> expectedThreads = List.of(createdThread.toBuilder().tags(update.tags()).build());
+
+            // Create filter for the specified status
+            var statusFilter = TraceThreadFilter.builder()
+                    .field(TraceThreadField.TAGS)
+                    .operator(Operator.CONTAINS)
+                    .value(update.tags().iterator().next())
+                    .build();
+
+            assertThreadPage(null, projectId, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
+                    workspaceName);
+            assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads, List.of(statusFilter));
+        }
+
         private void assertTheadStream(String projectName, UUID projectId, String apiKey, String workspaceName,
                 List<TraceThread> expectedThreads, List<TraceThreadFilter> filters) {
             var actualThreads = traceResourceClient.searchTraceThreadsStream(projectName, projectId, apiKey,
@@ -4926,13 +5144,13 @@ class TracesResourceTest {
             // Add feedback scores with different values
             String scoreName = RandomStringUtils.secure().nextAlphanumeric(10);
 
-            var scoreItems = Stream.of(threadId1, threadId2, threadId3)
-                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream.of(threadId1, threadId2, threadId3)
+                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
                             .threadId(threadId)
                             .projectName(projectName)
                             .name(scoreName)
                             .build())
-                    .toList();
+                    .collect(toList());
 
             Instant now = Instant.now();
             traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
@@ -4940,7 +5158,7 @@ class TracesResourceTest {
             // Create feedback scores for expected threads
             var feedbackScores = scoreItems.stream()
                     .collect(Collectors.toMap(
-                            FeedbackScoreBatchItem::threadId,
+                            FeedbackScoreItem::threadId,
                             item -> List.of(createExpectedFeedbackScore(item, now))));
 
             // Create expected threads in the correct order based on direction
@@ -4977,50 +5195,50 @@ class TracesResourceTest {
                             true,
                             Operator.EQUAL,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) this::generateExpectedEqualsMatch,
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) this::generateUnexpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
                             (Function<BigDecimal, String>) BigDecimal::toString), // Filter value function for EQUAL
                     Arguments.of(
                             false,
                             Operator.EQUAL,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) this::generateExpectedEqualsMatch,
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) this::generateUnexpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateExpectedEqualsMatch,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) this::generateUnexpectedEqualsMatch,
                             (Function<BigDecimal, String>) BigDecimal::toString),
                     Arguments.of(
                             true,
                             Operator.IS_NOT_EMPTY,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateNotEmptyMatch(name),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateUnexpectedNotEmptyMatch(name),
                             (Function<BigDecimal, String>) value -> ""), // Empty value for IS_NOT_EMPTY
                     Arguments.of(
                             false,
                             Operator.IS_NOT_EMPTY,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateNotEmptyMatch(name),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateUnexpectedNotEmptyMatch(name),
                             (Function<BigDecimal, String>) value -> ""),
                     Arguments.of(
                             true,
                             Operator.IS_EMPTY,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateIsEmptyMatch(name),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateNotEmptyMatch(name),
                             (Function<BigDecimal, String>) value -> ""), // Empty value for IS_EMPTY
                     Arguments.of(
                             false,
                             Operator.IS_EMPTY,
                             generateExpectedIndices(),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateIsEmptyMatch(name),
-                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>>) (name,
+                            (BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>>) (name,
                                     value) -> generateNotEmptyMatch(name),
                             (Function<BigDecimal, String>) value -> "")
 
@@ -5031,16 +5249,16 @@ class TracesResourceTest {
             return new HashSet<>(List.of(RandomUtils.secure().randomInt(0, 5), RandomUtils.secure().randomInt(0, 5)));
         }
 
-        private List<FeedbackScoreBatchItem> generateIsEmptyMatch(String name) {
-            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class)
+        private List<FeedbackScoreBatchItemThread> generateIsEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
                     .stream()
                     .filter(score -> !score.name().equals(name))
                     .toList();
         }
 
-        private List<FeedbackScoreBatchItem> generateNotEmptyMatch(String name) {
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils.manufacturePojoList(factory,
-                    FeedbackScoreBatchItem.class);
+        private List<FeedbackScoreBatchItemThread> generateNotEmptyMatch(String name) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
 
             scores.set(0, scores.getFirst().toBuilder()
                     .name(name)
@@ -5049,16 +5267,16 @@ class TracesResourceTest {
             return scores;
         }
 
-        private List<FeedbackScoreBatchItem> generateUnexpectedNotEmptyMatch(String name) {
-            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class)
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedNotEmptyMatch(String name) {
+            return PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
                     .stream()
                     .filter(score -> !score.name().equals(name))
                     .toList();
         }
 
-        private List<FeedbackScoreBatchItem> generateExpectedEqualsMatch(String name, BigDecimal value) {
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils.manufacturePojoList(factory,
-                    FeedbackScoreBatchItem.class);
+        private List<FeedbackScoreBatchItemThread> generateExpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
 
             scores.set(0, scores.getFirst().toBuilder()
                     .name(name)
@@ -5068,9 +5286,9 @@ class TracesResourceTest {
             return scores;
         }
 
-        private List<FeedbackScoreBatchItem> generateUnexpectedEqualsMatch(String name, BigDecimal value) {
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils.manufacturePojoList(factory,
-                    FeedbackScoreBatchItem.class);
+        private List<FeedbackScoreBatchItemThread> generateUnexpectedEqualsMatch(String name, BigDecimal value) {
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils.manufacturePojoList(factory,
+                    FeedbackScoreBatchItemThread.class);
 
             scores.set(0, scores.getFirst().toBuilder()
                     .name(name)
@@ -5086,8 +5304,8 @@ class TracesResourceTest {
                 boolean stream,
                 Operator operator,
                 Set<Integer> expectedThreadIndices,
-                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>> matchingScoreFunction,
-                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItem>> unmatchingScoreFunction,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> matchingScoreFunction,
+                BiFunction<String, BigDecimal, List<FeedbackScoreBatchItemThread>> unmatchingScoreFunction,
                 Function<BigDecimal, String> filterValueFunction) {
 
             // Given
@@ -5134,7 +5352,7 @@ class TracesResourceTest {
             BigDecimal targetScoreValue = factory.manufacturePojo(BigDecimal.class);
 
             // Create feedback scores based on the provided map
-            List<FeedbackScoreBatchItem> expectedScores = allThreadIds
+            List<FeedbackScoreBatchItemThread> expectedScores = allThreadIds
                     .stream()
                     .filter(threadId -> isExpected(expectedThreadIndices, threadId, allThreadIds))
                     .flatMap(threadId -> {
@@ -5143,9 +5361,9 @@ class TracesResourceTest {
                                         .threadId(threadId.toString())
                                         .projectName(projectName)
                                         .build());
-                    }).toList();
+                    }).collect(Collectors.toList());
 
-            List<FeedbackScoreBatchItem> unexpectedScores = allThreadIds.stream()
+            List<FeedbackScoreBatchItemThread> unexpectedScores = allThreadIds.stream()
                     .filter(threadId -> !isExpected(expectedThreadIndices, threadId, allThreadIds))
                     .flatMap(threadId -> {
                         return unmatchingScoreFunction.apply(targetScoreName, targetScoreValue).stream()
@@ -5153,9 +5371,10 @@ class TracesResourceTest {
                                         .threadId(threadId.toString())
                                         .projectName(projectName)
                                         .build());
-                    }).toList();
+                    }).collect(Collectors.toList());
 
-            List<FeedbackScoreBatchItem> scoreItems = Stream.concat(expectedScores.stream(), unexpectedScores.stream())
+            List<FeedbackScoreBatchItemThread> scoreItems = Stream
+                    .concat(expectedScores.stream(), unexpectedScores.stream())
                     .toList();
 
             // Create feedback scores for threads
@@ -5243,7 +5462,9 @@ class TracesResourceTest {
                                 .endTime())
                         .numberOfMessages(expectedTraces.size() * 2L)
                         .id(threadId)
-                        .totalEstimatedCost(getTotalEstimatedCost(spans))
+                        .totalEstimatedCost(Optional.ofNullable(getTotalEstimatedCost(spans))
+                                .filter(value -> value.compareTo(BigDecimal.ZERO) > 0)
+                                .orElse(null))
                         .usage(getUsage(spans))
                         .status(status)
                         .feedbackScores(feedbackScores)
@@ -5502,15 +5723,19 @@ class TracesResourceTest {
 
             var traces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
                     .stream()
-                    .map(trace -> trace.toBuilder()
-                            .projectId(null)
-                            .projectName(projectName)
-                            .usage(null)
-                            .feedbackScores(null)
-                            .endTime(trace.startTime().plus(randomNumber(), ChronoUnit.MILLIS))
-                            .comments(null)
-                            .spanCount(RandomUtils.secure().randomInt(1, 11))
-                            .build())
+                    .map(trace -> {
+                        var llmSpanCount = RandomUtils.secure().randomInt(1, 7);
+                        return trace.toBuilder()
+                                .projectId(null)
+                                .projectName(projectName)
+                                .usage(null)
+                                .feedbackScores(null)
+                                .endTime(trace.startTime().plus(randomNumber(), ChronoUnit.MILLIS))
+                                .comments(null)
+                                .spanCount(llmSpanCount + RandomUtils.secure().randomInt(1, 7))
+                                .llmSpanCount(llmSpanCount)
+                                .build();
+                    })
                     .map(trace -> trace.toBuilder()
                             .duration(trace.startTime().until(trace.endTime(), ChronoUnit.MICROS) / 1000.0)
                             .build())
@@ -5524,7 +5749,7 @@ class TracesResourceTest {
                                     .usage(Map.of("completion_tokens", RandomUtils.secure().randomInt()))
                                     .projectName(projectName)
                                     .traceId(trace.id())
-                                    .type(SpanType.general)
+                                    .type(i < trace.llmSpanCount() ? SpanType.llm : SpanType.general)
                                     .build()))
                     .toList();
 
@@ -5696,6 +5921,14 @@ class TracesResourceTest {
                     Arguments.of(Comparator.comparing(Trace::spanCount).reversed()
                             .thenComparing(Comparator.comparing(Trace::id).reversed()),
                             SortingField.builder().field(SortableFields.SPAN_COUNT).direction(Direction.DESC).build()),
+                    Arguments.of(Comparator.comparing(Trace::llmSpanCount)
+                            .thenComparing(Comparator.comparing(Trace::id).reversed()),
+                            SortingField.builder().field(SortableFields.LLM_SPAN_COUNT).direction(Direction.ASC)
+                                    .build()),
+                    Arguments.of(Comparator.comparing(Trace::llmSpanCount).reversed()
+                            .thenComparing(Comparator.comparing(Trace::id).reversed()),
+                            SortingField.builder().field(SortableFields.LLM_SPAN_COUNT).direction(Direction.DESC)
+                                    .build()),
                     Arguments.of(usageComparator,
                             SortingField.builder().field("usage.completion_tokens").direction(Direction.ASC).build()),
                     Arguments.of(usageComparator.reversed(),
@@ -5879,7 +6112,7 @@ class TracesResourceTest {
                             .projectName(finalTraces.get(i).projectName())
                             .id(finalTraces.get(i).id())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scoreForSpan, apiKey, workspaceName);
 
@@ -6145,7 +6378,8 @@ class TracesResourceTest {
             traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
             traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId1)
                             .projectName(projectName)
@@ -6215,7 +6449,7 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("threadFeedbackScoreTestCases")
         @DisplayName("Thread feedback scores contract test")
-        void scoreBatchOfThreads_contractErrorTest(List<FeedbackScoreBatchItem> scores, int expectedStatus,
+        void threadFeedbackScores_contractTest(List<FeedbackScoreBatchItemThread> scores, int expectedStatus,
                 String expectedError) {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
@@ -6246,15 +6480,15 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             projectResourceClient.createProject(projectName, apiKey, workspaceName);
 
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
-                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(UUID.randomUUID().toString())
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
                             .source(ScoreSource.SDK)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             List<Trace> traces = scores.stream()
                     .map(item -> createTrace().toBuilder()
@@ -6287,15 +6521,15 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             projectResourceClient.createProject(projectName, apiKey, workspaceName);
 
-            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
-                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+            List<FeedbackScoreBatchItemThread> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(UUID.randomUUID().toString())
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
                             .source(ScoreSource.SDK)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             // When
             try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
@@ -6305,9 +6539,10 @@ class TracesResourceTest {
             }
         }
 
-        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItem> scores, Response response) {
+        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItemThread> scores,
+                Response response) {
             String threadIds = scores.stream()
-                    .map(FeedbackScoreBatchItem::threadId)
+                    .map(FeedbackScoreItem::threadId)
                     .sorted()
                     .collect(Collectors.joining(", "));
 
@@ -6328,7 +6563,7 @@ class TracesResourceTest {
             // Valid case
             String score1 = RandomStringUtils.secure().nextAlphanumeric(10);
 
-            var validScore = initFeedbackScoreItem()
+            var validScore = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6336,7 +6571,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID case
-            var missingThreadIdScore = initFeedbackScoreItem()
+            var missingThreadIdScore = initThreadFeedbackItem()
                     .threadId(null)
                     .projectName(projectName)
                     .projectId(null)
@@ -6344,7 +6579,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing thread ID
-            var blankThreadId = initFeedbackScoreItem()
+            var blankThreadId = initThreadFeedbackItem()
                     .threadId("")
                     .projectName(projectName)
                     .projectId(null)
@@ -6352,7 +6587,7 @@ class TracesResourceTest {
                     .build();
 
             // Missing value
-            var missingValueCase = initFeedbackScoreItem()
+            var missingValueCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6360,21 +6595,21 @@ class TracesResourceTest {
                     .value(null)
                     .build();
 
-            var missingNameCase = initFeedbackScoreItem()
+            var missingNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name(null)
                     .build();
 
-            var blankNameCase = initFeedbackScoreItem()
+            var blankNameCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
                     .name("")
                     .build();
 
-            var missingSourceCase = initFeedbackScoreItem()
+            var missingSourceCase = initThreadFeedbackItem()
                     .threadId(threadId)
                     .projectName(projectName)
                     .projectId(null)
@@ -6408,7 +6643,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreBatchItem item, Instant now) {
+    private FeedbackScoreBatchItemThread.FeedbackScoreBatchItemThreadBuilder<?, ?> initThreadFeedbackItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder();
+    }
+
+    private FeedbackScore createExpectedFeedbackScore(FeedbackScoreItem item, Instant now) {
         return FeedbackScore.builder()
                 .name(item.name())
                 .value(item.value())
@@ -6460,14 +6699,15 @@ class TracesResourceTest {
             Mono.delay(Duration.ofMillis(500)).block();
             traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class)
+            List<FeedbackScoreBatchItemThread> scoreItems = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
                     .stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId)
                             .projectName(projectName)
                             .projectId(null)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             // Create expected thread with initial scores
             Instant now = Instant.now();
@@ -7184,7 +7424,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7363,7 +7604,8 @@ class TracesResourceTest {
                             .map(item -> FeedbackScoreMapper.INSTANCE.toFeedbackScoreBatchItem(
                                     span.id(), projectName, item)))
                     .toList();
-            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName, apiKey);
+            createAndAssertForSpan(FeedbackScoreBatch.builder().scores(spanScores).build(), workspaceName,
+                    apiKey);
 
             getAndAssertPage(workspaceName, projectName, null, List.of(), traces, traces.reversed(), List.of(), apiKey);
             getAndAssertPageSpans(workspaceName, projectName, List.of(), spans, spans.reversed(), List.of(), apiKey);
@@ -7906,7 +8148,7 @@ class TracesResourceTest {
             // Get created comment by id and assert
             Comment actualComment = traceResourceClient.getCommentById(expectedComment.id(), traceId, API_KEY,
                     TEST_WORKSPACE, 200);
-            assertTraceComment(expectedComment, actualComment);
+            assertComment(expectedComment, actualComment);
         }
 
         @Test
@@ -8303,7 +8545,7 @@ class TracesResourceTest {
                             IntStream.range(0, 1001)
                                     .mapToObj(__ -> initFeedbackScoreItem()
                                             .projectName(DEFAULT_PROJECT).build())
-                                    .toList())
+                                    .collect(toList()))
                             .build(), "scores size must be between 1 and 1000"),
                     arguments(
                             FeedbackScoreBatch.builder()
@@ -8453,7 +8695,8 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("invalidRequestBodyParams")
         @DisplayName("when batch request is invalid, then return bad request")
-        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatch batch, String errorMessage) {
+        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatchContainer batch,
+                String errorMessage) {
             try (var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
                     .path("feedback-scores")
                     .request()
@@ -8583,12 +8826,12 @@ class TracesResourceTest {
                     .build();
             var id = create(expectedTrace, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 1000)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 1000)
                     .mapToObj(__ -> initFeedbackScoreItem()
                             .projectName(DEFAULT_PROJECT)
                             .id(id)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
         }
 
@@ -8605,7 +8848,7 @@ class TracesResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertErrorResponse(actualResponse, "trace id must be a version 7 UUID", 400);
             }
@@ -8628,18 +8871,18 @@ class TracesResourceTest {
 
             traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE);
 
-            var scores = traces.stream()
+            List<FeedbackScoreBatchItem> scores = traces.stream()
                     .map(trace -> initFeedbackScoreItem()
                             .id(trace.id())
                             .projectName(projectNameModifier.apply(projectName))
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
 
             var expectedTracesWithScores = traces.stream()
                     .map(trace -> {
-                        FeedbackScoreBatchItem feedbackScoreBatchItem = scores.stream()
+                        FeedbackScoreItem feedbackScoreBatchItem = scores.stream()
                                 .filter(score -> score.id().equals(trace.id()))
                                 .findFirst()
                                 .orElseThrow();
@@ -8659,12 +8902,11 @@ class TracesResourceTest {
         }
     }
 
-    private FeedbackScoreBatchItemBuilder initFeedbackScoreItem() {
-        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
-                .threadId(null);
+    private FeedbackScoreBatchItemBuilder<?, ?> initFeedbackScoreItem() {
+        return factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder();
     }
 
-    private FeedbackScore mapFeedbackScore(FeedbackScoreBatchItem feedbackScoreBatchItem) {
+    private FeedbackScore mapFeedbackScore(FeedbackScoreItem feedbackScoreBatchItem) {
         return FeedbackScore.builder()
                 .name(feedbackScoreBatchItem.name())
                 .value(feedbackScoreBatchItem.value())
@@ -8978,6 +9220,11 @@ class TracesResourceTest {
             // Create multiple threads with different values
             List<String> threadIds = PodamFactoryUtils.manufacturePojoList(factory, String.class);
 
+            Map<String, TraceThreadUpdate> updates = threadIds.stream()
+                    .collect(Collectors.toMap(
+                            threadId -> threadId,
+                            threadId -> factory.manufacturePojo(TraceThreadUpdate.class)));
+
             // Create traces for each thread with varying number of messages
             List<Trace> allTraces = new ArrayList<>();
             Map<String, List<Trace>> tracesByThread = new HashMap<>();
@@ -8996,7 +9243,20 @@ class TracesResourceTest {
                 traceResourceClient.batchCreateTraces(threadTraces, apiKey, workspaceName);
 
                 threadTraces.forEach(trace -> {
-                    List<Span> spans = createSpans(trace, projectName, null, null);
+                    List<Span> spans = PodamFactoryUtils.manufacturePojoList(factory, Span.class).stream()
+                            .map(span -> span.toBuilder()
+                                    .projectName(projectName)
+                                    .traceId(trace.id())
+                                    .usage(spanResourceClient.getTokenUsage())
+                                    .totalEstimatedCost(null)
+                                    .model(spanResourceClient.randomModel().toString())
+                                    .provider(spanResourceClient.provider())
+                                    .feedbackScores(null)
+                                    .comments(null)
+                                    .errorInfo(null)
+                                    .build())
+                            .toList();
+
                     spansByThread.computeIfAbsent(threadId, k -> new ArrayList<>()).addAll(spans);
                 });
 
@@ -9011,12 +9271,41 @@ class TracesResourceTest {
             UUID projectId = getProjectId(projectName, workspaceName, apiKey);
 
             // Build expected threads from our created traces
-            List<TraceThread> expectedThreads = threadIds.stream()
-                    .map(threadId -> getExpectedThreads(tracesByThread.get(threadId), projectId, threadId,
-                            spansByThread.get(threadId), TraceThreadStatus.ACTIVE))
+            List<TraceThread> threads = threadIds.stream()
+                    .map(threadId -> {
+
+                        List<Span> spansWithTotalEstimatedCost = spansByThread.get(threadId).stream()
+                                .map(span -> span.toBuilder()
+                                        .totalEstimatedCost(calculateEstimatedCost(List.of(span)))
+                                        .build())
+                                .toList();
+
+                        // Update thread to add tags
+                        var createdThread = traceResourceClient.getTraceThread(threadId, projectId, apiKey,
+                                workspaceName);
+                        traceResourceClient.updateThread(updates.get(threadId), createdThread.threadModelId(), apiKey,
+                                workspaceName, 204);
+
+                        return getExpectedThreads(tracesByThread.get(threadId), projectId, threadId,
+                                spansWithTotalEstimatedCost, TraceThreadStatus.ACTIVE)
+                                .stream()
+                                .map(thread -> thread.toBuilder()
+                                        .tags(updates.get(threadId).tags())
+                                        .build())
+                                .toList();
+                    })
                     .flatMap(List::stream)
+                    .toList();
+
+            List<TraceThread> expectedThreads = threads
+                    .stream()
                     .sorted(comparator)
                     .toList();
+
+            // mark threads are opened
+            threads.forEach(thread -> {
+                traceResourceClient.openTraceThread(thread.id(), thread.projectId(), null, apiKey, workspaceName);
+            });
 
             // Get trace threads with sorting
             TraceThreadPage traceThreadPage = traceResourceClient.getTraceThreads(projectId, null,
@@ -9030,6 +9319,7 @@ class TracesResourceTest {
         }
 
         private Stream<Arguments> getTraceThreads__whenSortingByValidFields__thenReturnTraceThreadsSorted() {
+            Comparator<TraceThread> tagsComparator = Comparator.comparing(thread -> thread.tags().toString());
             return Stream.of(
                     Arguments.of(
                             Comparator.comparing(TraceThread::totalEstimatedCost)
@@ -9098,7 +9388,13 @@ class TracesResourceTest {
                     Arguments.of(
                             Comparator.comparing(TraceThread::createdAt).reversed()
                                     .thenComparing(Comparator.comparing(TraceThread::lastUpdatedAt).reversed()),
-                            SortingField.builder().field(SortableFields.CREATED_AT).direction(Direction.DESC).build()));
+                            SortingField.builder().field(SortableFields.CREATED_AT).direction(Direction.DESC).build()),
+                    Arguments.of(
+                            tagsComparator,
+                            SortingField.builder().field(SortableFields.TAGS).direction(Direction.ASC).build()),
+                    Arguments.of(
+                            tagsComparator.reversed(),
+                            SortingField.builder().field(SortableFields.TAGS).direction(Direction.DESC).build()));
         }
 
         @ParameterizedTest
@@ -9488,6 +9784,174 @@ class TracesResourceTest {
         }
     }
 
+    @Nested
+    @DisplayName("Thread Comment:")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadComment {
+
+        @Test
+        void createCommentForNonExistingThreadFail() {
+            threadCommentResourceClient.generateAndCreateComment(generator.generate(), API_KEY, TEST_WORKSPACE, 404);
+        }
+
+        @Test
+        void createAndGetComment() {
+            // Create comment for existing thread
+            var thread = createThread();
+            Comment expectedComment = threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(),
+                    API_KEY, TEST_WORKSPACE,
+                    201);
+
+            // Get created comment by id and assert
+            Comment actualComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+            assertComment(expectedComment, actualComment);
+        }
+
+        @Test
+        void createAndUpdateComment() {
+            // Create comment for existing thread
+            var thread = createThread();
+            Comment expectedComment = threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(),
+                    API_KEY, TEST_WORKSPACE,
+                    201);
+
+            // Get created comment by id and assert
+            Comment actualComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+
+            // Update existing comment
+            String updatedText = factory.manufacturePojo(String.class);
+            threadCommentResourceClient.updateComment(updatedText, expectedComment.id(), API_KEY,
+                    TEST_WORKSPACE, 204);
+
+            // Get comment by id and assert it was updated
+            Comment updatedComment = threadCommentResourceClient.getCommentById(expectedComment.id(),
+                    thread.threadModelId(), API_KEY,
+                    TEST_WORKSPACE, 200);
+            assertUpdatedComment(actualComment, updatedComment, updatedText);
+        }
+
+        @Test
+        void deleteComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            // Check it was created
+            expectedComments.forEach(
+                    comment -> threadCommentResourceClient.getCommentById(comment.id(), thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 200));
+
+            // Delete comment
+            BatchDelete request = BatchDelete.builder()
+                    .ids(expectedComments.stream().map(Comment::id).collect(Collectors.toSet())).build();
+            threadCommentResourceClient.deleteComments(request, API_KEY, TEST_WORKSPACE);
+
+            // Verify comments were actually deleted via get and update endpoints
+            expectedComments.forEach(
+                    comment -> threadCommentResourceClient.getCommentById(comment.id(), thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 404));
+            expectedComments
+                    .forEach(comment -> threadCommentResourceClient.updateComment(factory.manufacturePojo(String.class),
+                            comment.id(), API_KEY, TEST_WORKSPACE, 404));
+        }
+
+        @Test
+        void getThreadWithComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            TraceThread actualThread = traceResourceClient.getTraceThread(thread.id(), thread.projectId(), API_KEY,
+                    TEST_WORKSPACE);
+
+            assertComments(expectedComments, actualThread.comments().reversed());
+        }
+
+        @Test
+        void getThreadsWithComments() {
+            // Create comments for existing thread
+            var thread = createThread();
+
+            List<Comment> expectedComments = IntStream.range(0, 5)
+                    .mapToObj(i -> threadCommentResourceClient.generateAndCreateComment(thread.threadModelId(), API_KEY,
+                            TEST_WORKSPACE, 201))
+                    .toList().reversed();
+
+            var threadsPage = traceResourceClient.getTraceThreads(thread.projectId(), null, API_KEY, TEST_WORKSPACE,
+                    null, null, null);
+
+            assertComments(expectedComments, threadsPage.content().getFirst().comments().reversed());
+        }
+    }
+
+    @Nested
+    @DisplayName("Thread Update:")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadUpdate {
+
+        @Test
+        void updateNonExistingThreadFail() {
+            traceResourceClient.updateThread(factory.manufacturePojo(TraceThreadUpdate.class), generator.generate(),
+                    API_KEY, TEST_WORKSPACE, 404);
+        }
+
+        @Test
+        void createAndUpdateThread() {
+            // Create comment for existing thread
+            var thread = createThread();
+
+            // Check that it doesn't have tags
+            assertThat(thread.tags()).isNull();
+
+            // Update thread
+            var update = factory.manufacturePojo(TraceThreadUpdate.class);
+            traceResourceClient.updateThread(update, thread.threadModelId(), API_KEY, TEST_WORKSPACE, 204);
+
+            // Check that update was applied
+            var actualThread = traceResourceClient.getTraceThread(thread.id(), thread.projectId(), API_KEY,
+                    TEST_WORKSPACE);
+            TraceAssertions.assertThreads(List.of(thread.toBuilder()
+                    .tags(update.tags())
+                    .build()), List.of(actualThread));
+
+        }
+    }
+
+    private TraceThread createThread() {
+        var threadId = UUID.randomUUID().toString();
+        var projectName = UUID.randomUUID().toString();
+
+        var traces = IntStream.range(0, 5)
+                .mapToObj(i -> createTrace().toBuilder()
+                        .threadId(threadId)
+                        .projectName(projectName)
+                        .build())
+                .toList();
+
+        traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE);
+        var projectId = getProjectId(projectName, TEST_WORKSPACE, API_KEY);
+
+        //Wait for the thread to be created
+        Awaitility.await().pollInterval(100, TimeUnit.MILLISECONDS).untilAsserted(() -> {
+            TraceThread traceThread = traceResourceClient.getTraceThread(threadId, projectId, API_KEY, TEST_WORKSPACE);
+            Assertions.assertThat(traceThread.threadModelId()).isNotNull();
+        });
+
+        return traceResourceClient.getTraceThread(threadId, projectId, API_KEY, TEST_WORKSPACE);
+    }
+
     private void assertErrorResponse(Response actualResponse, String message, int expected) {
         assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(expected);
         assertThat(actualResponse.hasEntity()).isTrue();
@@ -9517,7 +9981,7 @@ class TracesResourceTest {
         }
     }
 
-    private void createAndAssertForSpan(FeedbackScoreBatch request, String workspaceName, String apiKey) {
+    private void createAndAssertForSpan(FeedbackScoreBatchContainer request, String workspaceName, String apiKey) {
         try (var actualResponse = client.target(URL_TEMPLATE_SPANS.formatted(baseURI))
                 .path("feedback-scores")
                 .request()
@@ -9556,11 +10020,34 @@ class TracesResourceTest {
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, Long::sum));
     }
 
+    private Trace updateSpanCounts(Trace trace, List<Span> spans) {
+        return updateSpanCounts(List.of(trace), spans).getFirst();
+    }
+
+    private List<Trace> updateSpanCounts(List<Trace> traces, List<Span> spans) {
+        var spansByTraceId = spans.stream().collect(Collectors.groupingBy(Span::traceId));
+        return updateSpanCounts(traces, spansByTraceId);
+    }
+
+    private List<Trace> updateSpanCounts(List<Trace> traces, Map<UUID, List<Span>> spansByTraceId) {
+        return traces.stream()
+                .map(trace -> {
+                    List<Span> ts = spansByTraceId.getOrDefault(trace.id(), List.of());
+                    var total = ts.size();
+                    var llmCount = ts.stream().filter(s -> s.type() == SpanType.llm).toList().size();
+                    return trace.toBuilder()
+                            .spanCount(total)
+                            .llmSpanCount(llmCount)
+                            .build();
+                })
+                .toList();
+    }
+
     private void mockGetWorkspaceIdByName(String workspaceName, String workspaceId) {
         AuthTestUtils.mockGetWorkspaceIdByName(wireMock.server(), workspaceName, workspaceId);
     }
 
-    private List<List<FeedbackScoreBatchItem>> createMultiValueTraceThreadScores(
+    private List<List<FeedbackScoreBatchItemThread>> createMultiValueTraceThreadScores(
             List<String> multipleValuesFeedbackScores,
             Project project, String apiKey, String workspaceName) {
         return IntStream.range(0, multipleValuesFeedbackScores.size())
@@ -9584,18 +10071,183 @@ class TracesResourceTest {
                     Mono.delay(Duration.ofMillis(500)).block();
                     traceResourceClient.closeTraceThread(threadId, project.id(), null, apiKey, workspaceName);
 
-                    List<FeedbackScoreBatchItem> scores = multipleValuesFeedbackScores.stream()
-                            .map(name -> initFeedbackScoreItem()
+                    List<FeedbackScoreBatchItemThread> scores = multipleValuesFeedbackScores.stream()
+                            .map(name -> factory.manufacturePojo(FeedbackScoreBatchItemThread.class).toBuilder()
                                     .name(name)
                                     .projectName(project.name())
                                     .threadId(threadId)
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     traceResourceClient.threadFeedbackScores(scores, apiKey, workspaceName);
 
                     return scores;
                 }).toList();
+    }
+
+    @Nested
+    @DisplayName("Thread Reopening and Manual Score Deletion")
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    class ThreadReopeningManualScoreDeletion {
+
+        @Test
+        @DisplayName("When thread is closed, manually scored, and reopened, then manual scores are deleted")
+        void whenThreadIsClosedManuallyScored_andReopened_thenManualScoresAreDeleted() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            var threadId = UUID.randomUUID().toString();
+
+            // Create initial traces for the thread
+            List<Trace> initialTraces = IntStream.range(0, 3)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(initialTraces, apiKey, workspaceName);
+
+            // Wait for thread processing
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Wait for thread to be closed
+
+            // Add manual scores to the closed thread
+            List<FeedbackScoreBatchItemThread> manualScores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .source(ScoreSource.UI)
+                            .build())
+                    .collect(Collectors.toList());
+
+            manualScores.set(0, manualScores.get(0)
+                    .toBuilder()
+                    .source(ScoreSource.SDK)
+                    .build());
+
+            traceResourceClient.threadFeedbackScores(manualScores, apiKey, workspaceName);
+
+            // Create new traces to reopen the thread
+            List<Trace> newTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(newTraces, apiKey, workspaceName);
+
+            // Wait for thread to be reopened and manual scores to be deleted
+            Awaitility.await()
+                    .atMost(10, TimeUnit.SECONDS)
+                    .untilAsserted(() -> {
+                        var actualThreads = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
+                                null, null, null);
+
+                        List<Trace> allTraces = Stream.concat(initialTraces.stream(), newTraces.stream()).toList();
+
+                        var expectedReopenedThreads = getExpectedThreads(allTraces, projectId, threadId, List.of(),
+                                TraceThreadStatus.ACTIVE);
+
+                        // Verify manual scores have been deleted
+                        TraceAssertions.assertThreads(expectedReopenedThreads, actualThreads.content());
+                    });
+        }
+
+        @Test
+        @DisplayName("When thread is closed, manually scored, and reopened, then only manual scores are deleted (not automatic scores)")
+        void whenThreadIsClosedWithMixedScores_andReopened_thenOnlyManualScoresAreDeleted() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var projectId = projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            var threadId = UUID.randomUUID().toString();
+
+            // Create initial traces for the thread
+            List<Trace> initialTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(initialTraces, apiKey, workspaceName);
+
+            // Wait for thread processing
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the thread
+            traceResourceClient.closeTraceThread(threadId, projectId, null, apiKey, workspaceName);
+
+            // Wait for thread to be closed
+
+            // Add mixed scores to the closed thread (manual and automatic)
+            List<FeedbackScoreBatchItemThread> mixedScores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItemThread.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .collect(Collectors.toList());
+
+            mixedScores.set(0, mixedScores.getFirst()
+                    .toBuilder()
+                    .source(ScoreSource.ONLINE_SCORING)
+                    .build());
+
+            Instant createdAt = Instant.now();
+            traceResourceClient.threadFeedbackScores(mixedScores, apiKey, workspaceName);
+
+            // Create new traces to reopen the thread
+            List<Trace> newTraces = IntStream.range(0, 2)
+                    .mapToObj(i -> createTrace().toBuilder()
+                            .projectName(projectName)
+                            .threadId(threadId)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(newTraces, apiKey, workspaceName);
+
+            // Wait for thread to be reopened and manual scores to be deleted
+            Awaitility.await()
+                    .atMost(10, TimeUnit.SECONDS)
+                    .untilAsserted(() -> {
+
+                        var actualThreads = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
+                                null, null, null);
+
+                        List<Trace> allTraces = Stream.concat(initialTraces.stream(), newTraces.stream()).toList();
+
+                        var expectedReopenedThreads = getExpectedThreads(allTraces, projectId, threadId, List.of(),
+                                TraceThreadStatus.ACTIVE,
+                                List.of(createExpectedFeedbackScore(mixedScores.getFirst(), createdAt)));
+
+                        // Verify manual scores have been deleted, but automatic scores remain
+                        TraceAssertions.assertThreads(expectedReopenedThreads, actualThreads.content());
+                    });
+        }
     }
 
 }
